returning from lines
